--- a/deepmarketplace/pom.xml
+++ b/deepmarketplace/pom.xml
@@ -82,8 +82,13 @@
     <version>5.0.9</version>
 </dependency>
 
-    
-    
+
+
+  	<dependency>
+  		<groupId>mavenproject</groupId>
+  		<artifactId>mavenproject</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
 
   <build>
