Home page element update

--- a/deepmarketplace/configue.properties
+++ b/deepmarketplace/configue.properties
@@ -3,3 +3,4 @@ url=https://beta.deepmarketplace.com/
 zipcodee=07083
 email=kalpesh.sc@yopmail.com
 password=Pass@123
+storename=Bhavani Food Farmers Market
