login & signup test cases update

--- a/deepmarketplace/configue.properties
+++ b/deepmarketplace/configue.properties
@@ -4,3 +4,8 @@ zipcode=07083
 email=kalpesh.sc@yopmail.com
 password=Pass@123
 storename=Bhavani Food Farmers Market
+fullname=dhanusha desai
+signupEmail=dhanusha@yopmail.com
+mobilenumber=9876543210
+signupPassword=Pass@123
+signupConfirmPassword=Pass@123
