Store page update

--- a/deepmarketplace/configue.properties
+++ b/deepmarketplace/configue.properties
@@ -1,9 +1,9 @@
-browser=chrome
+browser=firefox
 url=https://beta.deepmarketplace.com/
 zipcode=07083
 email=kalpesh.sc@yopmail.com
 password=Pass@123
-storename=Bhavani Food Farmers Market
+storename=BHAVANI FOODS GROCERY MARKET
 fullname=dhanusha desai
 signupEmail=dhanusha@yopmail.com
 mobilenumber=9876543210
