--- a/deepmarketplace/pom.xml
+++ b/deepmarketplace/pom.xml
@@ -68,7 +68,8 @@
 <dependency>
     <groupId>io.github.bonigarcia</groupId>
     <artifactId>webdrivermanager</artifactId>
-    <version>5.6.2</version>
+    <version>5.7.0</version>
+    <scope>compile</scope>
 </dependency>
 <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 <dependency>
