--- a/deepmarketplace/configue.properties
+++ b/deepmarketplace/configue.properties
@@ -3,7 +3,7 @@ url=https://beta.deepmarketplace.com/
 zipcode=07083
 email=kalpesh.sc@yopmail.com
 password=Pass@123
-storename=BHAVANI FOODS GROCERY MARKET
+storename=SUBZI MANDI
 fullname=dhanusha desai
 signupEmail=dhanusha@yopmail.com
 mobilenumber=9876543210
